test/TestPhases/typechecker/invalid/SyncControlInFunction2.blc
module

function calc() returns float64
    
    cobegin
        var x:int8 = 7
    with
        var y:float32 = -8.0
    end
    return 123.321
end

activity main ()()
    let x = calc()
    await false
end
